k8s/appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-deployment
  labels:
    app: appointment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment
  template:
    metadata:
      labels:
        app: appointment
    spec:
      containers:
      - name: appointment
        image: <ACR_LOGIN_SERVER>/appointment-service:latest
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet: { path: "/", port: 3001 }
          initialDelaySeconds: 5
          periodSeconds: 10
