k8s/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
