k8s/appointment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointment-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: appointment.<YOUR_DOMAIN>  # replace
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 80
