k8s/patient-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: patient.<YOUR_DOMAIN>   # replace
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80
